# ECS-Engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  diagram.md  engine.cfg  readme.md
doc/: Architecture.md  ECS.md  Engine.md  PluginsCreationGuide.md
include/: ComponentManager.hpp  ComponentWrapper.hpp  Components.hpp  Entity.hpp  EntityManager.hpp  EventManager.hpp  IComponentPool.hpp  ISystem.hpp  ResourceManager.hpp  Scene.hpp  SystemManager.hpp  Vector.hpp
include/Components/: Audio.hpp  Grid.hpp  Health.hpp  Motion.hpp  Position.hpp  Texture.hpp  Transform.hpp
include/ECS/: ComponentManager.hpp  Entity.hpp  EntityManager.hpp  IComponentPool.hpp  ISystem.hpp  SystemManager.hpp
include/Engine/: Core.hpp  CoreComponents.hpp  CoreSystems.hpp  EventManager.hpp  IPlugin.hpp  PluginManager.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp  SceneParser.hpp  Types.hpp
include/Engine/Components/: Color.hpp  EntityInfo.hpp  Fov.hpp  Material.hpp  Position.hpp  Radius.hpp  Rotation.hpp  Scale.hpp  Viewport.hpp
include/Engine/Systems/: Editor.hpp  IRenderer.hpp  RTConverter.hpp
include/Engine/Types/: EntityType.hpp  SystemType.hpp
include/Utils/: DynamicLoader.hpp  Logger.hpp  Math.hpp
plugins/: CMakeLists.txt
plugins/camera/: CMakeLists.txt  Camera.cpp
plugins/camera/include/: Camera.hpp
plugins/light/: CMakeLists.txt
plugins/light/ambient/: Ambient.cpp  CMakeLists.txt
plugins/light/ambient/include/: Ambient.hpp
plugins/light/diffuse/: CMakeLists.txt  Diffuse.cpp
plugins/light/diffuse/include/: Diffuse.hpp
plugins/light/directional/: CMakeLists.txt  Directional.cpp
plugins/light/directional/include/: Directional.hpp
plugins/light/point/: CMakeLists.txt  Point.cpp
plugins/light/point/include/: Point.hpp
plugins/primitive/: CMakeLists.txt
plugins/primitive/cone/: CMakeLists.txt  Cone.cpp  README.md
plugins/primitive/cone/include/: Cone.hpp
plugins/primitive/cube/: CMakeLists.txt  Cube.cpp  README.md
plugins/primitive/cube/include/: Cube.hpp
plugins/primitive/cylinder/: CMakeLists.txt  Cylinder.cpp  README.md
plugins/primitive/cylinder/include/: Cylinder.hpp
plugins/primitive/plane/: CMakeLists.txt  Plane.cpp  README.md
plugins/primitive/plane/include/: Plane.hpp
plugins/primitive/sphere/: CMakeLists.txt  Sphere.cpp
plugins/primitive/sphere/include/: Sphere.hpp
presets/: example.scn  test.scn
src/: Entity.cpp  EntityManager.cpp  SystemManager.cpp  Vector.cpp  main.cpp
src/ECS/: CMakeLists.txt  Entity.cpp  EntityManager.cpp  SystemManager.cpp
src/Engine/: CMakeLists.txt  Core.cpp  PluginManager.cpp  RTConverter.cpp  Scene.cpp  SceneManager.cpp  SceneParser.cpp
src/Utils/: CMakeLists.txt  DynamicLoader.cpp  Logger.cpp
